--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+        <link rel='stylesheet' href='style.css'>
+
         <title>Pizza Party</title>
     </head>
     <body>
