--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                before hand.
         </p>
 
-        <h5>This is how you make a pizza</h5>
+        <h5 class="special">This is how you make a pizza</h5>
         <p><small>There are some specific steps you need to take to make a 
             pizza, we will list them here.</small>
         </p>
@@ -45,13 +45,13 @@
         </h6>
 
         <ul>
-            <li>Pepperoni</li>
+            <li class="fave">Pepperoni</li>
             <li>olives</li>
             <li>peppers <strong>(never green)</strong></li>
             <li>mushrooms</li>
             <li>onions</li>
-            <li>jalapenos</li>
-            <li>pineapple <em>(only if you are crazy)</em></li>
+            <li class="fave">jalapenos</li>
+            <li class="fave">pineapple <em>(only if you are crazy)</em></li>
             <li>bacon</li>
         </ul>
 
