--- a/worksheet4/index.html
+++ b/worksheet4/index.html
@@ -100,5 +100,11 @@
         
 
         </main> 
+
+        <footer>
+            <p>This website is brought to you by the Letter F, B, and 
+                the number 42. It was made by Anderson.
+            </p>
+        </footer>
 </body>
 </html>
