--- a/worksheet4/index.html
+++ b/worksheet4/index.html
@@ -25,7 +25,7 @@
                     <button>3. Video</button>
                     <button class="push">4. Audio</button>
                     <button>5. Media</button>
-                    <a href="buttonhtml" target="blank"><button>Would you like to 
+                    <a href="button.html" target="blank"><button>Would you like to 
                         know more?</button></a>
                 </div>
             </ul>
