--- a/worksheet4/button.html
+++ b/worksheet4/button.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="styles.css">
-
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Tangerine">
 
     <title>Let's Flexbox!</title>
 
@@ -38,7 +39,7 @@
           <section class="button-one-section">
 
             <img class="button-top-img" 
-            src="https://www.placekitten.com/800/300">
+            src="http://placekitten.com/800/300">
           </section>
 
 
